# Tachyon-Mesh

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  tachyon.db
.claude/: settings.local.json
.github/workflows/: ci.yml  integration.yml  publish-sdks.yml  release.yml  wit-compat.yml
bench/: README.md  collect-resources.sh  generate-report.py  run-fortio.sh  setup-k3d.sh
bench/results/: profile.md  report.md
bench/workloads/: echo.yaml
cli-signer/: Cargo.toml
cli-signer/src/: main.rs
core-host/: Cargo.toml  build.rs
core-host/src/: ai_inference.rs  asset_registry.rs  auth.rs  core_error.rs  data_events.rs  error.rs  host_core.rs  main.rs  memory_governor.rs  model_broker.rs  node_enrollment.rs  rate_limit.rs  resiliency.rs  server_h3.rs  system_storage.rs  telemetry.rs  tls_runtime.rs
core-host/src/host_core/: app_runtime.rs  background_workers.rs  bridge.rs  component_hosts.rs  config_impls.rs  constants.rs  domain_types.rs  entrypoint.rs  guest_output.rs  guest_runtime.rs  integrity_config.rs  peer_pressure.rs  prewarm.rs  runtime_types.rs  storage_broker.rs  supervisors.rs  tests.rs  uds_fast_path.rs  volumes.rs
core-host/src/host_core/tests/: background_connectors.rs  config_validation.rs  http_router.rs  integrity_admin.rs  l4_tls_quic.rs  mesh_control_plane.rs  rate_limit_models.rs  reload_and_guest.rs  routing_aliases.rs  support_and_cache.rs  telemetry_and_l4.rs  uds_loop_resilience.rs
core-host/src/identity/: mod.rs
core-host/src/mesh/: mod.rs
core-host/src/network/: mod.rs
core-host/src/runtime/: mod.rs
core-host/src/state/: mod.rs
core-host/src/storage/: mod.rs
core-host/src/store/: mod.rs
core-host/src/telemetry/: mod.rs
core-host/tests/: chaos_test.rs  node_lifecycle.rs
crates/smolvm/: Cargo.toml
ebpf-probes/: Cargo.toml
ebpf-probes/src/: lib.rs
examples/guest-ai/: Cargo.toml
examples/guest-csharp/: guest-csharp.csproj
examples/guest-example/: Cargo.toml
examples/guest-flaky/: Cargo.toml
examples/guest-go/: go.mod
examples/guest-grpc/: Cargo.toml
examples/guest-grpc-interop/: Cargo.toml
examples/guest-js/: index.js
examples/guest-log-storm/: Cargo.toml
examples/guest-malicious/: Cargo.toml
examples/guest-rag-vector/: Cargo.toml
examples/guest-udp-echo/: Cargo.toml
examples/guest-voip-gate/: Cargo.toml
examples/guest-volume/: Cargo.toml
examples/guest-websocket-echo/: Cargo.toml
faas-sdk/: Cargo.toml
faas-sdk/src/: lib.rs
guest-ai/src/: lib.rs
guest-call-legacy/: Cargo.toml
guest-csharp/: Program.cs
guest-example/: Cargo.toml
guest-example/src/: lib.rs
guest-flaky/src/: lib.rs
guest-go/: main.go
guest-grpc/src/: lib.rs
guest-java/: pom.xml
guest-log-storm/src/: lib.rs
guest-loop/: Cargo.toml
guest-tcp-echo/: Cargo.toml
guest-tcp-echo/src/: lib.rs
guest-udp-echo/src/: lib.rs
guest-voip-gate/src/: lib.rs
guest-volume/src/: lib.rs
guest-websocket-echo/src/: lib.rs
legacy-mock/: Cargo.toml
legacy-mock/src/: main.rs
manifests/: deploy.yaml  homelab.yaml
scripts/: build-guest-artifacts.sh
sdk/go/: README.md  go.mod
sdk/js/: package.json
sdk/python/: pyproject.toml
sdk/python/tachyon_sdk/: __init__.py
sdk/rust/: Cargo.toml
system-faas-bridge/src/: lib.rs
system-faas-buffer/src/: lib.rs
system-faas-cdc/src/: lib.rs
system-faas-cert-manager/src/: lib.rs
system-faas-gateway/src/: lib.rs
system-faas-gossip/src/: lib.rs
system-faas-k8s-scaler/src/: lib.rs
system-faas-keda/: Cargo.toml
system-faas-keda/src/: lib.rs
system-faas-logger/src/: lib.rs
system-faas-metering/src/: lib.rs
system-faas-prom/: Cargo.toml
system-faas-prom/src/: lib.rs
system-faas-s3-proxy/src/: lib.rs
system-faas-sqs/src/: lib.rs
system-faas-storage-broker/: Cargo.toml
system-faas-storage-broker/src/: lib.rs
systems/system-faas-auth/: Cargo.toml
systems/system-faas-authn/: Cargo.toml
systems/system-faas-authz/: Cargo.toml
systems/system-faas-bridge/: Cargo.toml
systems/system-faas-buffer/: Cargo.toml
systems/system-faas-cdc/: Cargo.toml
systems/system-faas-cert-manager/: Cargo.toml
systems/system-faas-config-api/: Cargo.toml
systems/system-faas-dist-limiter/: Cargo.toml
systems/system-faas-enrollment/: Cargo.toml
systems/system-faas-enrollment/src/: lib.rs
systems/system-faas-gateway/: Cargo.toml
systems/system-faas-gc/: Cargo.toml
systems/system-faas-gitops-broker/: Cargo.toml
systems/system-faas-gossip/: Cargo.toml
systems/system-faas-keda/: Cargo.toml
systems/system-faas-microvm-runner/: Cargo.toml
systems/system-faas-microvm-runner/src/: guest_agent.rs  lib.rs
tachyon-cli/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  vite.config.ts
tachyon-cli/src/: lib.rs  main.rs  main.ts
tachyon-client/: Cargo.toml
tachyon-client/src/: lib.rs
tachyon-mcp/: Cargo.toml
tachyon-ui/: .env.example  Cargo.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
tachyon-ui/src/: animations.ts  lib.rs  main.rs  main.ts  qrcode.d.ts  router.ts  style.css
tachyon-ui/src/components/: NetworkStatus.ts
tachyon-ui/src/components/iam/: TachyonIAM.ts
tachyon-ui/src/components/layout/: TachyonAppShell.ts
tachyon-ui/src/components/routing/: TachyonRoutingDashboard.ts
tachyon-ui/src/controllers/: aiController.ts  routingController.ts
tachyon-ui/src/stores/: connectionStore.ts
tachyon-ui/src/utils/: network.ts
tachyon-ui/src/views/: aiOrchestration.ts  routing.ts
turboquant-sys/: Cargo.toml  build.rs
turboquant-sys/native/: turboquant.cpp  turboquant.hpp
turboquant-sys/src/: lib.rs
turboquant-sys/tools/: generate_fixtures.cpp
wit/: authn.wit  authz.wit  config-ai.wit  config-assets.wit  config-cache.wit  config-fleet.wit  config-hardware.wit  config-observability.wit  config-rbac.wit  config-resilience.wit  config-routing.wit  config-security.wit  config-storage.wit  config-topology.wit  config-workloads.wit  identity.wit  tachyon.wit
wit-accelerator/: accelerator-cpu.wit  accelerator-npu.wit
(+813 files in other folders)
