[workspace]
members = [
    "core-host",
    "faas-sdk",
    "guest-ai",
    "guest-call-legacy",
    "guest-example",
    "guest-flaky",
    "guest-grpc",
    "guest-log-storm",
    "guest-loop",
    "guest-malicious",
    "guest-tcp-echo",
    "guest-websocket-echo",
    "guest-udp-echo",
    "guest-volume",
    "legacy-mock",
    "system-faas-metering",
    "system-faas-storage-broker",
    "system-faas-k8s-scaler",
    "system-faas-keda",
    "system-faas-logger",
    "system-faas-cert-manager",
    "system-faas-gc",
    "system-faas-prom",
    "system-faas-sqs",
    "tachyon-cli",
    "turboquant-sys",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
