[workspace]
members = [
    "core-host",
    "faas-sdk",
    "examples/guest-ai",
    "examples/guest-call-legacy",
    "examples/guest-example",
    "examples/guest-flaky",
    "examples/guest-grpc",
    "examples/guest-log-storm",
    "examples/guest-loop",
    "examples/guest-malicious",
    "examples/guest-tcp-echo",
    "examples/guest-websocket-echo",
    "examples/guest-udp-echo",
    "examples/guest-voip-gate",
    "examples/guest-volume",
    "legacy-mock",
    "systems/system-faas-bridge",
    "systems/system-faas-metering",
    "systems/system-faas-storage-broker",
    "systems/system-faas-auth",
    "systems/system-faas-k8s-scaler",
    "systems/system-faas-keda",
    "systems/system-faas-logger",
    "systems/system-faas-gateway",
    "systems/system-faas-cert-manager",
    "systems/system-faas-cdc",
    "systems/system-faas-gc",
    "systems/system-faas-gossip",
    "systems/system-faas-prom",
    "systems/system-faas-buffer",
    "systems/system-faas-s3-proxy",
    "systems/system-faas-sqs",
    "tachyon-client",
    "tachyon-ui",
    "tachyon-mcp",
    "turboquant-sys",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
