[package]
name = "cli-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
