[package]
name = "core-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
ai-inference = ["dep:candle-core", "dep:candle-nn", "dep:turboquant-sys", "dep:wasmtime-wasi-nn"]
rate-limit = ["dep:governor", "dep:forwarded-header-value"]
resiliency = ["dep:tower"]
secrets-vault = []
websockets = ["axum/ws", "dep:futures-util"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
arc-swap = "1.7"
axum = "0.7"
bytes = "1.5"
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
ed25519-dalek = "2"
futures-util = { version = "0.3", optional = true }
forwarded-header-value = { version = "0.1", optional = true }
governor = { version = "0.6", optional = true }
hex = "0.4"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "service", "tokio", "http1", "http2"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rustls-pemfile = "2"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tower = { version = "0.5", optional = true, features = ["retry", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
turboquant-sys = { path = "../turboquant-sys", optional = true }
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "42.0.1", features = ["component-model"] }
wasmtime-wasi = { version = "42.0.1", features = ["p1"] }
wasmtime-wasi-nn = { version = "42.0.1", optional = true, default-features = false, features = ["onnx-download"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prost = "0.13"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
