[package]
name = "core-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
ai-inference = ["dep:candle-core", "dep:candle-nn", "dep:ort", "dep:turboquant-sys", "dep:wasmtime-wasi-nn"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:tower", "dep:tokio-stream"]
mtls = []
rate-limit = ["dep:governor", "dep:forwarded-header-value"]
resiliency = ["dep:tower"]
secrets-vault = []
websockets = ["axum/ws", "dep:futures-util"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-trait = "0.1"
arc-swap = "1.7"
axum = "0.8"
bytes = "1.5"
candle-core = { version = "0.10.0", optional = true }
candle-nn = { version = "0.10.0", optional = true }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2"
futures-util = { version = "0.3", optional = true }
forwarded-header-value = { version = "0.1", optional = true }
governor = { version = "0.10", optional = true }
moka = { version = "0.12", features = ["sync"] }
notify = { version = "8.0", default-features = false, features = ["macos_kqueue"] }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
hex = "0.4"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "service", "tokio", "http1", "http2"] }
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false }
quinn = { version = "0.11.9", optional = true, default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
redb = "4.0"
rustls-pemfile = "2"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sysinfo = "0.38"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-stream = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true, features = ["retry", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
system-faas-enrollment = { path = "../systems/system-faas-enrollment" }
system-faas-microvm-runner = { path = "../systems/system-faas-microvm-runner" }
turboquant-sys = { path = "../turboquant-sys", optional = true }
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "44.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "44.0.0", features = ["p1"] }
wasmtime-wasi-nn = { version = "44.0.0", optional = true, default-features = false, features = ["onnx-download"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prost = "0.14"
mockall = "0.14"
proptest = "1"
rcgen = "0.14"
tokio-test = "0.4"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
