[package]
name = "system-faas-microvm-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest-agent"
path = "src/guest_agent.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smolvm = { path = "../../crates/smolvm" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
